LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/PM_ACCT_INVOICE_DT__x.object-meta.xml
<CustomObject>
    <description>PM_ACCT_INVOICE_DT</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>PM_ACCT_INVOICE_DT</externalName>
    <label>PM_ACCT_INVOICE_DT</label>
    <pluralLabel>PM_ACCT_INVOICE_DT</pluralLabel>
</CustomObject>