LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/EDU_CESS_AMT__c.field-meta.xml
<CustomField>
    <fullName>EDU_CESS_AMT__c</fullName>
    <description>EDU_CESS_AMT</description>
    <externalDeveloperName>EDU_CESS_AMT</externalDeveloperName>
    <label>EDU_CESS_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>