LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/EDU_CESS_PER__c.field-meta.xml
<CustomField>
    <fullName>EDU_CESS_PER__c</fullName>
    <description>EDU_CESS_PER</description>
    <externalDeveloperName>EDU_CESS_PER</externalDeveloperName>
    <label>EDU_CESS_PER</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>