LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/FEE_AMT__c.field-meta.xml
<CustomField>
    <fullName>FEE_AMT__c</fullName>
    <description>FEE_AMT</description>
    <externalDeveloperName>FEE_AMT</externalDeveloperName>
    <label>FEE_AMT</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>