LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/INVOICE_AID__c.field-meta.xml
<CustomField>
    <fullName>INVOICE_AID__c</fullName>
    <description>INVOICE_AID</description>
    <externalDeveloperName>INVOICE_AID</externalDeveloperName>
    <label>INVOICE_AID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>