LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/MAT_AID__c.field-meta.xml
<CustomField>
    <fullName>MAT_AID__c</fullName>
    <description>MAT_AID</description>
    <externalDeveloperName>MAT_AID</externalDeveloperName>
    <label>MAT_AID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>