LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/OLD_INVOICE_AID__c.field-meta.xml
<CustomField>
    <fullName>OLD_INVOICE_AID__c</fullName>
    <description>OLD_INVOICE_AID</description>
    <externalDeveloperName>OLD_INVOICE_AID</externalDeveloperName>
    <label>OLD_INVOICE_AID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>