LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/OPE_AMT__c.field-meta.xml
<CustomField>
    <fullName>OPE_AMT__c</fullName>
    <description>OPE_AMT</description>
    <externalDeveloperName>OPE_AMT</externalDeveloperName>
    <label>OPE_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>