LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/PARTI_CODE__c.field-meta.xml
<CustomField>
    <fullName>PARTI_CODE__c</fullName>
    <description>PARTI_CODE</description>
    <externalDeveloperName>PARTI_CODE</externalDeveloperName>
    <label>PARTI_CODE</label>
    <length>12</length>
    <type>Text</type>
</CustomField>