LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/PARTICULARS__c.field-meta.xml
<CustomField>
    <fullName>PARTICULARS__c</fullName>
    <description>PARTICULARS</description>
    <externalDeveloperName>PARTICULARS</externalDeveloperName>
    <label>PARTICULARS</label>
    <length>800</length>
    <type>LongTextArea</type>
</CustomField>