LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/QTY__c.field-meta.xml
<CustomField>
    <fullName>QTY__c</fullName>
    <description>QTY</description>
    <externalDeveloperName>QTY</externalDeveloperName>
    <label>QTY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>