LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/SERVICE_TAX_PER__c.field-meta.xml
<CustomField>
    <fullName>SERVICE_TAX_PER__c</fullName>
    <description>SERVICE_TAX_PER</description>
    <externalDeveloperName>SERVICE_TAX_PER</externalDeveloperName>
    <label>SERVICE_TAX_PER</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>