LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/SUR_TAX_AMT__c.field-meta.xml
<CustomField>
    <fullName>SUR_TAX_AMT__c</fullName>
    <description>SUR_TAX_AMT</description>
    <externalDeveloperName>SUR_TAX_AMT</externalDeveloperName>
    <label>SUR_TAX_AMT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>