LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/TOTAL_AMT__c.field-meta.xml
<CustomField>
    <fullName>TOTAL_AMT__c</fullName>
    <description>TOTAL_AMT</description>
    <externalDeveloperName>TOTAL_AMT</externalDeveloperName>
    <label>TOTAL_AMT</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>