LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/UNIT_MEASURE__c.field-meta.xml
<CustomField>
    <fullName>UNIT_MEASURE__c</fullName>
    <description>UNIT_MEASURE</description>
    <externalDeveloperName>UNIT_MEASURE</externalDeveloperName>
    <label>UNIT_MEASURE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>