LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/UNIT_PRICE__c.field-meta.xml
<CustomField>
    <fullName>UNIT_PRICE__c</fullName>
    <description>UNIT_PRICE</description>
    <externalDeveloperName>UNIT_PRICE</externalDeveloperName>
    <label>UNIT_PRICE</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>