LinKreta_POC_Repository/force-app/main/default/objects/PM_ACCT_INVOICE_DT__x/fields/UNIT_SALES_TAX_AMT__c.field-meta.xml
<CustomField>
    <fullName>UNIT_SALES_TAX_AMT__c</fullName>
    <description>UNIT_SALES_TAX_AMT</description>
    <externalDeveloperName>UNIT_SALES_TAX_AMT</externalDeveloperName>
    <label>UNIT_SALES_TAX_AMT</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>